--- a/compprojectwork.html
+++ b/compprojectwork.html
@@ -29,6 +29,6 @@ MIS is also known for its strong sense of community. The school places a strong 
 Overall, MIS School is an exceptional institution that provides students with the knowledge and skills they need to succeed in their academic and personal endeavors.</li>
 </h4>
 <p ALIGN="center">
-<IMG src="C:\MIS.webp" 
+<IMG src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.misktm.edu.np%2F&psig=AOvVaw3jgmQV1aNy8bLccZbWmCk3&ust=1682648986548000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCOD7lI2Cyf4CFQAAAAAdAAAAABAI" 
 width="500"
 height="600">
